fix overflow attribute popup

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,7 @@
   top:0;
   height: 0;
   opacity: 0;
+  overflow: hidden;
   position: fixed;
   display: flex;
   justify-content: center;
